2008-08-27  Jonathan Pryor  <jpryor@novell.com>

	* StreamConverterTest.cs: Added; tests StreamConverter.
	* StreamTest.cs: Move existing Read/Write tests into StreamConverterTest.cs;
	  add tests for .WithSystemConverter().

2008-08-26  Jonathan Pryor  <jpryor@novell.com>

	* IEnumerableTest.cs: Remove test for removed .Implode() overloads.

2008-08-22  Jonathan Pryor  <jpryor@novell.com>

	* IEnumerableTest.cs: Add tests for .Shuffle().

2008-08-20  Jonathan Pryor  <jpryor@novell.com>

	* IEnumerableTest.cs: Add tests for .ToTuple(), .SequenceCompare().

2008-08-19  Jonathan Pryor  <jpryor@novell.com>

	* LambdaTest.cs: Fix RecFunc_P4_FuncNull() -- it was testing the wrong
	  Lambda.RecFunc() overload.

2008-08-19  Jonathan Pryor  <jpryor@novell.com>

	* CurryTest.cs: *Actually* add the file.

2008-08-19  Jonathan Pryor  <jpryor@novell.com>

	* LambdaTest.cs: Add/fix tests for additional RecFunc() overloads.

2008-08-19  Jonathan Pryor  <jpryor@novell.com>

	* LambdaTest.cs: Test RecFunc().

2008-08-19  Jonathan Pryor  <jpryor@novell.com>

	* CurryTest.cs: Added; tests for .Curry extension methods.

2008-08-18  Jonathan Pryor  <jpryor@novell.com>

	* StringTest.cs: Rename .Matches() to .MatchValues(); add tests for
	  .Matches().

2008-08-17  Jonathan Pryor  <jpryor@novell.com>

	* LambdaTest.cs: Added; tests Lambda.Func(), Lambda.Expression().

2008-08-17  Jonathan Pryor  <jpryor@novell.com>

	* StringTest.cs: Rename NamedCaptures to CaptureNamedGroups.

2008-08-17  Jonathan Pryor  <jpryor@novell.com>

	* Int16Test.cs, Int64Test.cs, UInt16Test.cs, UInt32Test.cs, UInt64Test.cs: 
	  Added; tests for .IsEven() and .IsOdd() on short, ushort, uint, long, ulong.
	* Int32Test.cs: Add tests for .IsEven() and .IsOdd().

2008-08-14  Bojan Rajkovic  <bojanr@brandeis.edu.

	* StringTest.cs: Added tests for regex convenience extension methods.

2008-08-08  Jonathan Pryor  <jpryor@novell.com>

	* StreamTest.cs: Change Stream.Read(out string, int, Encoding) to